add fitur next button

--- a/server/index.html
+++ b/server/index.html
@@ -12,12 +12,24 @@
   <h1>Selamat Datang</h1>
   
   <input type="text" name="searchZomato" value="" placeholder="cari makanan">
-  <button type="button" class='search' name="button">Search</button>
+  <button type="button" value="0" class='search' name="button" onclick='getZomato()'>Search</button>
+  <button type="button" value="0" class='next' onclick='getPagging()'>Next</button>
   <div class="zomatoResult">
     <!-- zomato result here -->
   </div>
 </body>
 <script>
+  //get paging
+  $("button.next")
+  function getPagging (){
+    //load page get timeline
+    
+    //rubah valuenya
+    let next = +$("button.next").val() + 20;
+    $("button.next").val(next)
+    getZomato(next)
+  }
+
   //get weather
   function getWeather(lat, long, cb){
     $.ajax({
@@ -25,7 +37,7 @@
       method: 'get',
       dataType: 'json',
       success: function(data){
-        console.log(data);
+        // console.log(data);
         cb(data)
       },
       fail: function(xhr, msg){
@@ -34,11 +46,18 @@
     })
   }
 
-  //get timeline
-  $("button.search").click(function(){
+  //get zomato
+  function getZomato(num){
+    let start
+    if(num){
+      start = num
+    } else {
+      start = 0
+      $("button.next").val(start)
+    }
     let search = $('input[name="searchZomato"]').val()
     $.ajax({
-      url: `http://localhost:3000/api/zomato?q=${search}`,
+      url: `http://localhost:3000/api/zomato?q=${search}&start=${start}`,
       method: 'get',
       dataType: 'json',
       success: function(data){
@@ -82,7 +101,9 @@
         $("div.zomatoResult").append(panel)
       }
     })
-  }); 
+  }
+
+
 </script>
 
 </html>
